# HidroAlerta

./: .gitignore  README.md  app.json  package-lock.json  package.json
.codex/skills/hidroalerta-data-analysis/: SKILL.md
.codex/skills/hidroalerta-data-analysis/agents/: openai.yaml
.codex/skills/hidroalerta-data-analysis/references/: dataset.md  methodology.md  notebook-workflow.md
Analise_Dos_Dados/: .gitignore  Analise.ipynb  README.md  main.py  pyproject.toml
Aplicativo_Celular/: app.json  package-lock.json  package.json
Aplicativo_Celular/scripts/: generate-brand-assets.mjs
Aplicativo_Celular/src/app/: _layout.tsx  historico.tsx  nivel-caixa.tsx
Dados/: CODIGO_COLETA.md  METODOLOGIA.md  README.md
Dados/1_2_colher_de_cha/: agua_pouca_terra_teste_1.csv  agua_pouca_terra_teste_2.csv
Dados/1_colher_de_cha/: agua_media_terra_teste_1.csv  agua_media_terra_teste_2.csv
Dados/2_colheres_de_cha/: agua_alta_terra_teste_1.csv  agua_alta_terra_teste_2.csv
Dados/agua_limpa/: agua_limpa_teste_1.csv  agua_limpa_teste_2.csv
ETL/: main.py  readme.md  schema.json
Simulador/: README.md  app.js  index.html  styles.css
src/app/: _layout.tsx  alertas.tsx  assistente.tsx  index.tsx  ph.tsx  sobre.tsx  temperatura.tsx  turbidez.tsx
src/app/configuracoes/: notificacoes.tsx  rede.tsx  usuarios.tsx
src/features/about/screens/: about-screen.tsx
src/shared/components/: app-backdrop.tsx  app-bottom-nav.tsx  app-header.tsx  hydro-bot-icon.tsx
src/shared/contexts/: refresh-interval-context.tsx  tank-detail-access-context.tsx
src/shared/hooks/: use-count-up.ts
(+22 files in other folders)
